2010-02-26       Gaius Mulley <gaius@gnu.org>

	* gm2/gm2-compiler/M2Base.mod:  IsArrayUnboundedCompatible
	  (New procedure).  Use IsArrayUnboundedCompatible to
	  check type equivalence during parameter passing.
	* gm2/gm2-compiler/M2Quads.mod:  IsSameUnbounded
	  (New procedure).  Use IsSameUnbounded to check
	  type equivalence during parameter passing.
	  These two procedures differ in their assumptions.
	* gm2/gm2-libs-iso/RTgen.mod:  allow doReadText to
	  be implemented with multiple calls to doRBytes.

2010-02-25       Gaius Mulley <gaius@gnu.org>

	* calling-c/datatypes/unbounded/run/pass/gm2.exp:
	* complex/run/pass/gm2.exp:
	* examples/callingC/run/pass/gm2.exp:
	* exceptions/run/pass/gm2.exp:
	* extensions/run/fail/gm2.exp:
	* extensions/run/pass/gm2.exp:
	* iso/run/pass/gm2.exp:
	* isolib/run/pass/gm2.exp:
	* linking/libarchive/pass/gm2.exp:
	* pim/options/optimize/run/pass/gm2.exp:
	* pim/run/fail/gm2.exp:
	* pim/run/pass/gm2.exp:
	* pimlib/base/run/pass/gm2.exp:
	* pimlib/logitech/run/pass/gm2.exp:
	* pimlib/run/pass/gm2.exp:
	* pimlib/ulm/run/pass/gm2.exp:
	* quads/run/pass/gm2.exp:
	* switches/check-all/run/pass/gm2.exp:
	* switches/iso/run/pass/gm2.exp:
	* switches/pim2/run/pass/gm2.exp:
	* switches/pim3/run/pass/gm2.exp:
	* switches/pim4/run/pass/gm2.exp:
	* types/run/pass/gm2.exp:  all have their link paths
	  corrected.  Tests should now run on machines without
	  a preinstalled gm2.
	* gm2/gm2spec.c:  construct -Lpaths for the various libraries
	  needed and use -llibname, rather than explicitly referencing
	  the absolute library though a path.
	* gm2/gm2-libs-iso/RTgen.mod:  added loop to detect if a short
	  read occurs and use successive reads until an error or the
	  required number of bytes are read.  Fixes a bug reported by
	  Scott Iverson
	  (http://lists.gnu.org/archive/html/gm2/2010-01/msg00030.html)
	* gm2/gm2-compiler/M2GenGCC.mod:  skip type of the designator.
	* gm2/gm2-compiler/M2Quads.mod:  skip type when testing