@@ -1,6 +1,5 @@
 Pre 1.0
 
-*  implement INT function.
 *  finish ISO libraries:
 *    SysVec one copy only between PIM and ISO.
 *    finish COROUTINES and PROCESSES.
@@ -8,6 +7,7 @@ Pre 1.0
      rtint.PROTECTION
 *    finish SEMAPHORES, GeneralUser
 *  add data alignment directives to records (Scott)
+*  allocation of dynamic arrays (extension using alloca).
 *  complete implementation of the following Logitech-3.0 libraries:
    Calandar, Chronometer,
    DateFormat, Decimals, Directories, DiskDirectory, FileMessage,
